codeocean/spec/testcasedatajava/ReachedEndOfFileWhileParsingTest.txt
./org/example/RecursiveMath.java:22: error: reached end of file while parsing
}
 ^
1 error
make: *** [Makefile:5: test] Error 1
